<resources>
    <string name="app_name">DataSharingAndCommunication</string>
    <string name="account">请输入帐号</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="auto_save_password">记住密码</string>
    <string name="more_login_setting">设置</string>
    <string name="hide_login">隐身登录</string>
    <string name="silence_login">静音登录</string>
    <string name="info_accounts">多设备在线</string>
    <string name="info_troop_message">群消息</string>
    <string name="register2">注册</string>
    <string name="sending_request">正在发送请求</string>
    <string name="settings">设置</string>
    <string name="exit">退出</string>
    <string name="ip">IP</string>
    <string name="port">PORT</string>
    <string name="ip_hint">请输入服务器ip地址</string>
    <string name="port_hint">请输入服务器端口号</string>
    <string name="qr_register">注册</string>
    <string name="mailbox">*邮箱</string>
    <string name="nickname">*昵称</string>
    <string name="password_">*密码</string>
    <string name="password_confirm">*确认密码</string>
    <string name="mailbox_hint">请输入邮箱</string>
    <string name="password_confirm_hint">确认密码</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="register">注 册</string>
    <string name="back">返回</string>
    <string name="send">发送</string>
    <string name="communication">会话</string>
    <string name="friends">好友</string>
    <string name="header">头像</string>
    <string name="name">name</string>
    <string name="msg">msg</string>
    <string name="time">time</string>
    <string name="sql_message_1">CREATE table IF NOT EXISTS_</string>
    <string name="sql_message_2">(_id INTEGER PRIMARY KEY AUTOINCREMENT,name TEXT,image TEXT,date TEXT,isCome TEXT,message TEXT)</string>
    <string name="message_hint">输入要发送的消息</string>
    <string name="register_tip">提示 \n带*项为必填项\n填写邮箱方便您找回密码以及了解更多信息</string>
</resources>
