<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar"
        android:orientation="vertical" >

        <Button
            android:id="@+id/reg_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dip"
            android:background="@drawable/selector_btn_back"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/qr_register"
            android:textColor="@color/white"
            android:textSize="20.0sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="15.0dip"
                android:paddingEnd="15.0dip"
                android:text="@string/mailbox"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginStart="10.0dip"
                android:layout_marginEnd="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:hint="@string/mailbox_hint"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:paddingStart="10.0dip"
                android:paddingEnd="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="15.0dip"
                android:paddingEnd="15.0dip"
                android:text="@string/nickname"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />


            <EditText
                android:inputType="text"
                android:id="@+id/reg_name"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginStart="10.0dip"
                android:layout_marginEnd="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:hint="@string/nickname_hint"
                android:maxLength="20"
                android:paddingStart="10.0dip"
                android:paddingEnd="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="15.0dip"
                android:paddingEnd="15.0dip"
                android:text="@string/password_"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginStart="10.0dip"
                android:layout_marginEnd="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingStart="10.0dip"
                android:paddingEnd="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="15.0dip"
                android:paddingEnd="15.0dp"
                android:text="@string/password_confirm"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/reg_password2"
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_marginStart="10.0dip"
                android:layout_marginEnd="15.0dip"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:hint="@string/password_confirm_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingStart="10.0dip"
                android:paddingEnd="10.0dip"
                android:textColor="#ff545454"
                android:textSize="16.0sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="10.0dip"
        android:gravity="start"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_tip"
            android:textColor="@color/button_unselected"
            android:textSize="14.0sp" />
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/op_bg_selector"
        android:text="@string/register"
        android:textColor="@color/black_a_f"
        android:textSize="18.0sp" />

</LinearLayout>