<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10.0dip"
    android:layout_marginRight="10.0dip"
    android:background="@drawable/shape_bg"
    android:gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="15.0dip"
            android:paddingEnd="15.0dip"
            android:text="@string/ip"
            android:textColor="@android:color/black"
            android:textSize="18.0sp" />

        <EditText
            android:inputType="number"
            android:id="@+id/setting_ip"
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_marginStart="10.0dip"
            android:layout_marginEnd="15.0dip"
            android:layout_weight="3"
            android:background="@android:color/white"
            android:hint="@string/ip_hint"
            android:maxLength="20"
            android:paddingStart="10.0dip"
            android:paddingEnd="10.0dip"
            android:textColor="#ff545454"
            android:textSize="16.0sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="@drawable/shape_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="15.0dip"
            android:paddingEnd="15.0dip"
            android:text="@string/port"
            android:textColor="@android:color/black"
            android:textSize="18.0sp" />

        <EditText
            android:id="@+id/setting_port"
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_marginStart="10.0dip"
            android:layout_marginEnd="15.0dip"
            android:layout_weight="3"
            android:background="@android:color/white"
            android:hint="@string/port_hint"
            android:inputType="number"
            android:maxLength="20"
            android:paddingStart="10.0dip"
            android:paddingEnd="10.0dip"
            android:textColor="#ff545454"
            android:textSize="16.0sp" />
    </LinearLayout>
</LinearLayout>