<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:contentDescription="@string/msg"
                android:id="@+id/notify_imageLog"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:src="@drawable/notify_icon" />

            <TextView
                android:id="@+id/notify_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/notify_imageLog"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/name"
                android:textColor="@color/black_a_f"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/notify_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/msg"
                android:textColor="@color/black_a_f"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/notify_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:text="@string/time"
                android:textColor="@color/black_a_f"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>